--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": "./source",
+    "paths": {
+      "@components": ["./source/components"],
+      "@styles": ["./source/styles"]
+    },
     "target": "es2016",
     "module": "commonjs",
     "esModuleInterop": true,
