--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.8.3"
   }
 }
