--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "next": "latest",
