--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/webpack": "^5.28.5",
     "gh-pages": "^6.3.0",
     "typescript": "^5.8.3"
   }
