fix: path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": "./source",
+    "baseUrl": "./",
     "paths": {
-      "@components": ["./source/components"],
-      "@styles": ["./source/styles"]
+      "@components/*": ["./source/components/*"],
+      "@styles/*": ["./source/styles/*"]
     },
     "target": "es2016",
     "module": "commonjs",
